--- a/trabalho_php/login.html
+++ b/trabalho_php/login.html
@@ -15,8 +15,11 @@
                     <input type="email" id="email" name="email" placeholder="E-mail" required><br><br>
                     <input type="password" id="senha" name="senha" placeholder="Senha" required><br><br>
                     <input type="submit" id="entrar" value="Entrar" onclick="validar(event)">
+
                     <p id="mensagemErro" style="color: red;"></p>
                 </form>
+                <a href="http://localhost/trabalho_php/trabalho_php/cadastro.html"><button id="cadastrar">cadastrar</button></a>
+
             </div>
         </div>
     </div>
